--- a/code/test/main.ipynb
+++ b/code/test/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = pk.load(open('D:/Identification-and-Classification-of-Toxic-Comments-/code/model.pkl','rb'))"
+    "model = pk.load(open('C:/Workspace/School/Seminar_CNPM/Identification-and-Classification-of-Toxic-Comments-/code/model.pkl','rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toxic : 0\n",
+      "severe_toxic : 0\n",
+      "obscene : 0\n",
+      "threat : 0\n",
+      "insult : 0\n",
+      "identity_hate : 0\n"
+     ]
+    }
+   ],
    "source": [
     "result_predict = model.predict(np.reshape(arr_text,(1,-1)))\n",
     "for i in range(len(LIST_LABELS)):\n",
@@ -56,8 +69,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
